--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,8 @@
     margin-left: 58%;
     width: 120px;
     height: 100%;
-    border-style: solid;
+    border-style:ridge;
+    border-color:black;
     border-radius: 15px;
     
 }
@@ -43,10 +44,15 @@
 }
 .Options
 {
+
     margin-top: 30px;
     width: 290px;
     background-color: rgba(245, 239, 239, 0.911);
     display: none;
+}
+.corner
+{
+    border-radius: 15px;
 }
 .select2{
     background-color: rgba(245, 239, 239, 0.911);
@@ -65,10 +71,16 @@
     display: none;
     background-color:rgba(245, 239, 239, 0.911);
 }
+.Otext
+{
+    margin-left: 6px;
+}
 .select1:hover .Options
 {
     display:block;
+    
 }
+
 .select2:hover .Options2
 {
     display:block;
@@ -401,6 +413,14 @@ div:hover.Otext
     .footertext{
     margin-left: 7%;
     width: 90%;
-    
+    }
+    .sbox
+    {
+        margin-left: -40%;
+        width: 80%;
+    }
+    .sbutton
+    {
+        width: 30%;
     }
 }
