--- a/css/index.css
+++ b/css/index.css
@@ -40,13 +40,13 @@
     width: 50%;
     margin-top: 20%;
     margin-left: 26%;
-    
+    font-size: 110%;
 }
 .Options
 {
 
-    margin-top: 30px;
-    width: 290px;
+    margin-top: 25px;
+    width: 301px;
     background-color: rgba(245, 239, 239, 0.911);
     display: none;
 }
@@ -66,25 +66,54 @@
 .Options2
 {
    
-    margin-top: 30px;
-     width: 130px;
+    margin-top: 25px;
+     width: 133px;
     display: none;
     background-color:rgba(245, 239, 239, 0.911);
 }
-.Otext
+.radiustop
 {
-    margin-left: 6px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.radiusbottom
+{
+    border-bottom-left-radius:15px;
+    border-bottom-right-radius:15px;
+}
+.select1:hover
+{
+    background-color:rgba(214, 211, 211, 0.911);
+}
+.select1:hover .stext
+{
+    border-style:solid;
+    border-width: 2px;
+    border-color: transparent transparent black  transparent ;
+}
+.select2:hover .stext
+{
+    border-style:solid;
+    border-width: 2px;
+    border-color: transparent transparent black  transparent ;
+}
+.select2:hover
+{
+    background-color:rgba(214, 211, 211, 0.911);
 }
 .select1:hover .Options
 {
     display:block;
+    cursor:pointer;
     
 }
 
 .select2:hover .Options2
 {
     display:block;
+    cursor:pointer;
 }
+
 div:hover.Otext
 {
     background-color: darkgrey;
