--- a/css/list.css
+++ b/css/list.css
@@ -1,8 +1,7 @@
 /* body */
 
-body{
+body {
   width: 100%;
-  height: 100%;
 }
 
 .Web_Header {
@@ -20,7 +19,8 @@ body{
   width: 33%;
   height: auto;
 }
-.tab-wrap {
+
+.Right_Content {
   -webkit-transition: 0.3s box-shadow ease;
   transition: 0.3s box-shadow ease;
   border-radius: 6px;
@@ -33,8 +33,6 @@ body{
   margin: 40px 0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-
-
 
 .Web_Footer {
   width: 100%;
@@ -67,7 +65,7 @@ body{
 .search {
   width: 30%;
   height: 100%;
-  margin-left: 78%;
+  margin-left: 70%;
 }
 
 .sbox {
@@ -98,6 +96,10 @@ ul {
 ul a {
   display: inline-block;
   text-decoration: none;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 /* 布局樣式 */
@@ -178,8 +180,6 @@ ul a {
 }
 
 /* 右邊版型 */
-
-
 
 .tab-wrap:hover {
   box-shadow: 0 12px 23px rgba(0, 0, 0, 0.23), 0 10px 10px rgba(0, 0, 0, 0.19);
@@ -332,8 +332,6 @@ body {
   background-color: #e7e7e7;
 }
 
-
-
 .container>*:not(.tab-wrap) {
   padding: 0 80px;
 }
@@ -348,8 +346,6 @@ h1, h2 {
 h2 {
   margin-bottom: 30px;
 }
-
-
 
 html {
   box-sizing: border-box;
@@ -420,6 +416,10 @@ ul li {
   font-family: "ff-dagny-web-pro", "Dagny Pro", Calibri, Arial, sans-serif;
   width: 50%;
   padding-left: 1rem;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .videos .video-list__item a .video-preview-image {
@@ -449,4 +449,82 @@ ul li {
   margin-top: 33px;
   margin-left: 30%;
   width: 40%;
+}
+
+@media screen and (max-width:1100px) {
+  .Web_Content {
+    width: 100%;
+    display: block;
+  }
+  .Left_Sidebar {
+    width: 100%;
+  }
+  .menu {
+    margin-left: 20%;
+    width: 60%;
+    list-style-type: none;
+  }
+  .Right_Content {
+    margin-left: 10%;
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width:850px) {
+  .videos .video-list__item a .video-preview-image img {
+    width: 130px;
+    height: 70px;
+  }
+}
+
+@media screen and (max-width:700px) {
+  .title {
+    margin-left: 0%;
+    display: none;
+  }
+  .footertext {
+    margin-left: 15%;
+    width: 70%;
+  }
+  .search {
+    width: 100%;
+    margin-left: 10%;
+  }
+}
+
+@media screen and (max-width:670px) {
+  .footertext {
+    margin-left: 7%;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width:670px) {
+  .navba {
+    width: 100%;
+    height: 80px;
+    display: block;
+  }
+  .search {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:550px) {
+  .menu {
+    margin-left: 10%;
+    width: 80%;
+    list-style-type: none;
+  }
+  .Right_Content {
+    margin-left: 0%;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width:420px) {
+  .videos .video-list__item a .video-preview-image img {
+    width: 70px;
+    height: 35px;
+  }
 }
