--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ div:hover.Otext
     border-radius: 50%;
 }
 .carousel{
-    background-color: red;
+    background-color:black;
     width: 100%;
     height: 500px;
 }
@@ -452,4 +452,23 @@ div:hover.Otext
     {
         width: 30%;
     }
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #000;
+}
+.a1{
+    height: 50%;
+    width: 1000px;
+    background-color: blue;
 }
