--- a/css/detail.css
+++ b/css/detail.css
@@ -1,7 +1,10 @@
 .big{
     margin: 30px;
     width: 100%;
-    display: flex;
+    flex-direction: column;
+    justify-content;
+    justify-content: flex-start;
+    /* display: flex; */
 }
 iframe{ 
     margin-right: 30px;
@@ -9,7 +12,7 @@ iframe{
 span{
     margin-right:30px ;
     padding: 20px;
-    width: 30%;
+    width: 100px;
     border: 1px solid black;
     border-radius: 20px;
     box-shadow:3px 3px 5px 6px #7c7c7c;
