--- a/css/detail.css
+++ b/css/detail.css
@@ -2,17 +2,17 @@
     margin: 30px;
     width: 100%;
     flex-direction: column;
-    justify-content;
     justify-content: flex-start;
-    /* display: flex; */
+    display: flex;
 }
 iframe{ 
     margin-right: 30px;
 }
 span{
+    margin-top: 10px;
     margin-right:30px ;
     padding: 20px;
-    width: 100px;
+    width: 63%;
     border: 1px solid black;
     border-radius: 20px;
     box-shadow:3px 3px 5px 6px #7c7c7c;
