--- a/css/detail.css
+++ b/css/detail.css
@@ -1,6 +1,111 @@
+.Web_Header {
+    width: 100%;
+    height: 80px;
+    z-index: 2;
+  }
+
+
+  /* Header */
+  
+.navba {
+    background-color: rgb(241, 241, 241);
+    width: 100%;
+    height: 80px;
+  }
+  
+  .navbadown {
+    background-color: darksalmon;
+    width: 100%;
+    height: 80px;
+  }
+  
+  .title {
+    margin-left: 10%;
+    position: absolute;
+    text-align: center;
+    line-height: 80px;
+    font-size: 250%;
+    color: rgb(8, 8, 179);
+  }
+  
+  .search {
+    width: 30%;
+    height: 100%;
+    margin-left: 70%;
+  }
+  
+  .sbox {
+    width: 56%;
+    height: 50%;
+    margin-top: 5%;
+    border-radius: 15px;
+  }
+  
+  .sbutton {
+    width: 14%;
+    height: 50%;
+    border-radius: 50%;
+  }
+
+@media screen and (max-width:1100px) {
+
+    .menu {
+      margin-left: 20%;
+      width: 60%;
+      list-style-type: none;
+    }
+  }
+  
+
+  
+  @media screen and (max-width:700px) {
+    .title {
+      margin-left: 0%;
+      display: none;
+    }
+    .footertext {
+      margin-left: 15%;
+      width: 70%;
+    }
+    .search {
+      width: 100%;
+      margin-left: 10%;
+    }
+  }
+  
+  @media screen and (max-width:670px) {
+    .footertext {
+      margin-left: 7%;
+      width: 90%;
+    }
+  }
+  
+  @media screen and (max-width:670px) {
+    .navba {
+      width: 100%;
+      height: 80px;
+      display: block;
+    }
+    .search {
+      width: 100%;
+    }
+  }
+  
+  @media screen and (max-width:550px) {
+    .menu {
+      margin-left: 10%;
+      width: 80%;
+      list-style-type: none;
+    }
+    .Right_Content {
+      margin-left: 0%;
+      max-width: 100%;
+    }
+  }
 .big{
     margin: 30px;
     width: 100%;
+    height: 100%;
     flex-direction: column;
     justify-content: flex-start;
     display: flex;
@@ -19,4 +124,19 @@ span{
 }
 .video{
     align-self: flex-end;
+    height: 100%;
 }
+.footer {
+    background-color: rgb(223, 219, 219);
+    width: 100%;
+    height: 130px;
+    position: absolute;
+  }
+  
+  .footertext {
+    position: relative;
+    text-align: center;
+    margin-top: 33px;
+    margin-left: 30%;
+    width: 40%;
+  }
