--- a/css/detail.css
+++ b/css/detail.css
@@ -56,8 +56,6 @@
     }
   }
   
-
-  
   @media screen and (max-width:700px) {
     .title {
       margin-left: 0%;
@@ -102,30 +100,43 @@
       max-width: 100%;
     }
   }
-.big{
-    margin: 30px;
+
+  .big{
     width: 100%;
-    height: 100%;
     flex-direction: column;
     justify-content: flex-start;
-    display: flex;
+     display: flex; 
 }
-iframe{ 
-    margin-right: 30px;
+.play{
+    width: 60%;
+margin-top: 10px;
+margin-left: 10px;
+margin-left: 10px;
 }
-span{
+.word{
+    margin-left: 10px;
     margin-top: 10px;
     margin-right:30px ;
     padding: 20px;
-    width: 63%;
+    width: 60%;
     border: 1px solid black;
     border-radius: 20px;
     box-shadow:3px 3px 5px 6px #7c7c7c;
 }
+.up{
+    display: flex; 
+
+}
+iframe{ 
+    margin-right: 30px;
+}
+iframe{ 
+    margin-right: 30px;
+}
 .video{
     align-self: flex-end;
-    height: 100%;
 }
+
 .footer {
     background-color: rgb(223, 219, 219);
     width: 100%;
