--- a/css/detail.css
+++ b/css/detail.css
@@ -47,12 +47,66 @@
     border-radius: 50%;
   }
 
+.play{
+    width: 60%;
+margin-top: 10px;
+margin-left: 10px;
+margin-left: 10px;
+}
+.word{
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-right:30px ;
+    padding: 20px;
+    width: 60%;
+    border: 1px solid black;
+    border-radius: 20px;
+    box-shadow:3px 3px 5px 6px #7c7c7c;
+}
+.up{
+    display: flex; 
+
+}
+iframe{ 
+    margin-right: 30px;
+}
+img {
+    height: 50px;
+    width:  50px;
+}
+
+.footer {
+    background-color: rgb(223, 219, 219);
+    width: 100%;
+    height: 130px;
+    position: absolute;
+  }
+  
+  .footertext {
+    position: relative;
+    text-align: center;
+    margin-top: 33px;
+    margin-left: 30%;
+    width: 40%;
+  }
 @media screen and (max-width:1100px) {
 
     .menu {
       margin-left: 20%;
       width: 60%;
       list-style-type: none;
+    }
+    .up {
+        display:block;
+    }
+    .down {
+        margin-top: 30px;
+    }
+    .play{
+        width: 100%;
+    }
+    .word{
+        width: 100%;
     }
   }
   
@@ -107,47 +161,3 @@
     justify-content: flex-start;
      display: flex; 
 }
-.play{
-    width: 60%;
-margin-top: 10px;
-margin-left: 10px;
-margin-left: 10px;
-}
-.word{
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-right:30px ;
-    padding: 20px;
-    width: 60%;
-    border: 1px solid black;
-    border-radius: 20px;
-    box-shadow:3px 3px 5px 6px #7c7c7c;
-}
-.up{
-    display: flex; 
-
-}
-iframe{ 
-    margin-right: 30px;
-}
-iframe{ 
-    margin-right: 30px;
-}
-.video{
-    align-self: flex-end;
-}
-
-.footer {
-    background-color: rgb(223, 219, 219);
-    width: 100%;
-    height: 130px;
-    position: absolute;
-  }
-  
-  .footertext {
-    position: relative;
-    text-align: center;
-    margin-top: 33px;
-    margin-left: 30%;
-    width: 40%;
-  }
