--- a/css/index.css
+++ b/css/index.css
@@ -1,143 +1,4 @@
-.navba
-{
-    background-color: rgb(241, 241, 241);
-    width: 100%;
-    height: 80px;
-    position:fixed;
-    z-index: 2;
-}
-.navbadown
-{
-    background-color: darksalmon;
-    width: 100%;
-    height: 80px;
 
-}
-
-.title
-{
-    margin-left: 10%;
-    position: absolute;
-    text-align:center;
-    line-height:80px;
-    font-size: 250%;
-    color: rgb(8, 8, 179);
-}
-
-.select1{
-    background-color: rgba(245, 239, 239, 0.911);
-    position: absolute;
-    margin-left: 58%;
-    width: 120px;
-    height: 100%;
-    border-style:ridge;
-    border-color:black;
-    border-radius: 15px;
-    
-}
-.stext
-{
-    width: 50%;
-    margin-top: 20%;
-    margin-left: 26%;
-    font-size: 110%;
-}
-.Options
-{
-
-    margin-top: 25px;
-    width: 301px;
-    background-color: rgba(245, 239, 239, 0.911);
-    display: none;
-}
-.corner
-{
-    border-radius: 15px;
-}
-.select2{
-    background-color: rgba(245, 239, 239, 0.911);
-    position: absolute;
-    margin-left: 68%;
-    width: 120px;
-    height: 100%;
-    border-style: solid;
-    border-radius: 15px;
-}
-.Options2
-{
-   
-    margin-top: 25px;
-     width: 133px;
-    display: none;
-    background-color:rgba(245, 239, 239, 0.911);
-}
-.radiustop
-{
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-.radiusbottom
-{
-    border-bottom-left-radius:15px;
-    border-bottom-right-radius:15px;
-}
-.select1:hover
-{
-    background-color:rgba(214, 211, 211, 0.911);
-}
-.select1:hover .stext
-{
-    border-style:solid;
-    border-width: 2px;
-    border-color: transparent transparent black  transparent ;
-}
-.select2:hover .stext
-{
-    border-style:solid;
-    border-width: 2px;
-    border-color: transparent transparent black  transparent ;
-}
-.select2:hover
-{
-    background-color:rgba(214, 211, 211, 0.911);
-}
-.select1:hover .Options
-{
-    display:block;
-    cursor:pointer;
-    
-}
-
-.select2:hover .Options2
-{
-    display:block;
-    cursor:pointer;
-}
-
-div:hover.Otext
-{
-    background-color: darkgrey;
-}
-.search
-{
-    
-    width: 30%;
-    height: 100%;
-    margin-left:78%;
-}
-.sbox
-{
-    width: 56%;
-    height: 50%;
-    margin-top: 5%;
-    border-radius: 15px;
-}
-.sbutton
-{
-    width: 14%;
-    height: 50%;
-    border-radius: 50%;
-}
 .carousel{
     background-color:black;
     width: 100%;
@@ -156,28 +17,130 @@ div:hover.Otext
     width: 100%;
     display: flex;
 }
+.mbutton
+{
+    height: 70%;
+    width: 560px;
+    color: blue;
+    border-style:solid;
+    margin-left: 26%;
+    
+}
+.presentation2
+{
+    height: 100%;
+    width:  100%;
+}
+.mtext
+{
+    margin-left: 43%;
+    margin-top: -325px;
+    font-size: 300%;
+    color: black;
+}
+.mtext1
+{
+    margin-left: 38%;
+    margin-top: -35px;
+    font-size: 300%;
+    color: black;
+}
+
+.select2{
+    background-color: rgba(245, 239, 239, 0.911);
+    position: absolute;
+    width: 100px;
+    height: 60px;
+    border-style: solid;
+    border-radius: 15px; 
+}
+.move
+{
+    margin-top: -3%;
+    margin-left: 24%;
+}
+.move2
+{
+    margin-top: -3%;
+    margin-left: 9%;
+}
+.move3
+{
+    margin-top: -15%;
+    margin-left: 7%;
+}
+.move4
+{
+    margin-top: -15%;
+    margin-left: 27%;
+}
+.move5
+{
+    margin-top: 3%;
+    margin-left: 16%;
+}
+.stext
+{
+    width: 50%;
+    margin-top: 12%;
+    margin-left: 26%;
+    font-size: 110%;
+}
+.Options2
+{
+   
+    margin-top: 25px;
+     width: 133px;
+    display: none;
+    background-color:rgba(245, 239, 239, 0.911);
+}
+.corner
+{
+    border-radius: 15px;
+}
+.radiustop
+{
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.radiusbottom
+{
+    border-bottom-left-radius:15px;
+    border-bottom-right-radius:15px;
+}
+.select2:hover .stext
+{
+    border-style:solid;
+    border-width: 2px;
+    border-color: transparent transparent black  transparent ;
+}
+.select2:hover
+{
+    background-color:rgba(214, 211, 211, 0.911);
+}
+.select2:hover .Options2
+{
+    display:block;
+    cursor:pointer;
+}
+
+div:hover.Otext
+{
+    background-color: darkgrey;
+}
+
+
+
+
 .presentation
 {
     height: 70%;
     width: 560px;
     margin-left: 11%;
 }
-.content
-{
-    margin-left: 1%;
-    background-color: rgb(193, 197, 207);
-    width: 560px;
-    height: 70%;
-   
-}
-.mtstyle
-{
-    margin-left: 30%;
-}
-.maintitle
-{
-    color: rgb(8, 8, 179);
-}
+
+
+
 .footer
 {
     background-color: rgb(223, 219, 219);
@@ -195,45 +158,6 @@ div:hover.Otext
     
 }
 
-/* Slider */
-.slick-slider
-{
-    position: relative;
-
-    display: block;
-    box-sizing: border-box;
-
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list
-{
-    position: relative;
-
-    display: block;
-    overflow: hidden;
-
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
 
 .slick-slider .slick-track,
 .slick-slider .slick-list
@@ -319,28 +243,9 @@ div:hover.Otext
     position: relative;
     top: 450px;
 }
-@media screen and (max-width:1370px)
-{
-    .presentation{
-        margin-left: 8%;
-    } 
-}
 
-@media screen and (max-width:1300px)
-{
-    .presentation{
-        margin-left: 4%;
-    } 
-}
 @media screen and (max-width:1200px)
 {
-    
-    .select1{
-        margin-left: 55%;
-    }
-    .select2{
-        margin-left: 66%;
-    }
     .presentation{
         margin-left: 1%;
     }
@@ -351,108 +256,10 @@ div:hover.Otext
         display: flow-root;
         height: 1300px;
     }
-    .presentation{
-        height: 600px;
-        width: 700px;
-        margin-left: 20%;
-    }
-    .content{
-        margin-top: 1%;
-        margin-left: 20%;
-        background-color: rgb(193, 197, 207);
-        height: 600px;
-        width: 700px;
-   }
     
 }
 
- @media screen and (max-width:1100px)
-{
-    .select1{
-        margin-left: 50%;
-    }
-    .select2{
-        margin-left: 64%;
-    }
-    .footertext{
-        margin-left: 20%;
-        width: 63%;
-        }
-}
-@media screen and (max-width:1000px)
-{
-    .presentation{
-        margin-left: 15%;
-    }
-    .content{
-        margin-left: 15%;
-   }
-    
-}
-@media screen and (max-width:860px)
-{
-    .presentation{
-        width: 100%;
-        margin-left: 0%;
-    }
-    .content{
-        width: 100%;
-        margin-left: 0%;
-   }
-    
-}
- @media screen and (max-width:843px)
-{
-    .select1{
-        margin-left: 43%;
-    }
-    .select2{
-        margin-left: 60%;
-    } 
-} 
-@media screen and (max-width:700px)
-{
-    .select1{
-        margin-left: 40%;
-    }
-    .select2{
-        margin-left: 58%;
-    }
-    .title
-    {
-        margin-left: 0%;
-    }
-    .footertext{
-        margin-left: 15%;
-        width: 70%;
-        }
-} 
-@media screen and (max-width:670px)
-{
-    .select1{
-        margin-left: 0%;
-    }
-    .select2{
-        margin-left: 40%;
-    }
-    .title
-    {
-        display: none;
-    }
-    .footertext{
-    margin-left: 7%;
-    width: 90%;
-    }
-    .sbox
-    {
-        margin-left: -40%;
-        width: 80%;
-    }
-    .sbutton
-    {
-        width: 30%;
-    }
-}
+ 
 
 body {
   width: 100%;
@@ -467,8 +274,4 @@ body {
   overflow: hidden;
   background: #000;
 }
-.a1{
-    height: 50%;
-    width: 100%;
-    background-color: blue;
-}
+
