--- a/css/detail.css
+++ b/css/detail.css
@@ -75,6 +75,10 @@ img {
     width:  50px;
 }
 
+.down{
+  justify-content: flex-end;
+}
+
 .footer {
     background-color: rgb(223, 219, 219);
     width: 100%;
@@ -82,13 +86,14 @@ img {
     position: absolute;
   }
   
-  .footertext {
+.footertext {
     position: relative;
     text-align: center;
     margin-top: 33px;
     margin-left: 30%;
     width: 40%;
-  }
+}
+
 @media screen and (max-width:1100px) {
 
     .menu {
