--- a/css/list.css
+++ b/css/list.css
@@ -4,13 +4,8 @@ body {
   width: 100%;
 }
 
-.Web_Header {
-  width: 100%;
-  height: 80px;
-  align-content: center;
-}
-
 .Web_Content {
+  margin-top: 20px;
   width: 100%;
   display: flex;
 }
@@ -18,8 +13,6 @@ body {
 .Left_Sidebar {
   width: 25%;
   height: auto;
-  margin-left: 3%;
-  margin-top: 20px;
 }
 
 .Right_Content {
@@ -41,27 +34,12 @@ body {
   height: 130px;
 }
 
-/* Header */
+/* content */
 
-.navbadown {
-  background-color: darksalmon;
-  width: 100%;
-  height: 80px;
-}
-
-.title {
-  margin-left: 10%;
-  position: absolute;
-  text-align: center;
-  line-height: 80px;
-  font-size: 250%;
-  color: rgb(8, 8, 179);
-}
+/* 左邊捷徑  版型  */
 
 .search {
-  margin-left: 20px;
-  width: 30%;
-  height: 100%;
+  width: 100%;
 }
 
 .sbox {
@@ -73,13 +51,9 @@ body {
 
 .sbutton {
   width: 14%;
-  height: 50%;
+  height: 25px;
   border-radius: 50%;
 }
-
-/* content */
-
-/* 左邊捷徑  版型  */
 
 ul {
   /* 取消ul預設的內縮及樣式 */
@@ -89,10 +63,10 @@ ul {
 }
 
 ul.drop-down-menu {
+  margin-top: 20px;
   border: #ccc 1px solid;
-  display: inline-block;
   font-family: 'Open Sans', Arial, sans-serif;
-  font-size: 13px;
+  font-size: 1.25rem;
 }
 
 ul.drop-down-menu li {
@@ -105,10 +79,7 @@ ul.drop-down-menu>li:last-child {
   border-right: none;
 }
 
-ul.drop-down-menu>li {
-  float: left;
-  /* 只有第一層是靠左對齊*/
-}
+
 
 ul.drop-down-menu a {
   background-color: #fff;
@@ -142,17 +113,10 @@ ul.drop-down-menu ul {
 
 ul.drop-down-menu ul li {
   border-bottom: #ccc 1px solid;
-
 }
 
 ul.drop-down-menu ul li:last-child {
   border-bottom: none;
-}
-
-
-ul.drop-down-menu ul {
-  /*隱藏次選單*/
-  display: none;
 }
 
 ul.drop-down-menu li:hover>ul {
@@ -162,7 +126,7 @@ ul.drop-down-menu li:hover>ul {
 
 ul.drop-down-menu ul {
   /*隱藏次選單*/
-  left: 99999px;
+  display: none;
   opacity: 0;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
@@ -251,24 +215,27 @@ ul.drop-down-menu ul li:hover>ul {
 }
 
 .tab1:checked+label {
-  background-color: green;
-  color: whitesmoke;
+  background-color: rgb(0, 162, 255);
+  color: white;
+  font-size: 1.5rem;
   box-shadow: 0 -1px 0 #fff inset;
   cursor: default;
 }
 
 .tab2:checked+label {
-  background-color: rgb(17, 0, 255);
-  color: whitesmoke;
+  background-color: rgb(0, 162, 255);
+  color: white;
+  font-size: 1.5rem;
   box-shadow: 0 -1px 0 #fff inset;
   cursor: default;
 }
 
 .tab3:checked+label {
-  background-color: red;
+  background-color: rgb(0, 162, 255);
   box-shadow: 0 -1px 0 #fff inset;
-  color: whitesmoke;
+  color: white;
   cursor: default;
+  font-size: 1.5rem;
 }
 
 .tab1:checked+label:hover {
@@ -287,6 +254,7 @@ ul.drop-down-menu ul li:hover>ul {
 }
 
 .tab1+label {
+  font-size: 1.5rem;
   box-shadow: 0 -1px 0 #eee inset;
   border-radius: 6px 6px 0 0;
   cursor: pointer;
@@ -307,10 +275,11 @@ ul.drop-down-menu ul li:hover>ul {
   height: 50px;
   box-sizing: border-box;
   padding: 15px;
-  background-color: rgb(123, 248, 179);
+  background-color: yellowgreen;
 }
 
 .tab2+label {
+  font-size: 1.5rem;
   box-shadow: 0 -1px 0 #eee inset;
   border-radius: 6px 6px 0 0;
   cursor: pointer;
@@ -330,10 +299,11 @@ ul.drop-down-menu ul li:hover>ul {
   height: 50px;
   box-sizing: border-box;
   padding: 15px;
-  background-color: rgb(130, 153, 255);
+  background-color: yellowgreen;
 }
 
 .tab3+label {
+  font-size: 1.5rem;
   box-shadow: 0 -1px 0 #eee inset;
   border-radius: 6px 6px 0 0;
   cursor: pointer;
@@ -354,7 +324,7 @@ ul.drop-down-menu ul li:hover>ul {
   height: 50px;
   box-sizing: border-box;
   padding: 15px;
-  background-color: rgb(255, 79, 79);
+  background-color: yellowgreen;
 }
 
 .tab1+label:hover {
@@ -396,14 +366,6 @@ body {
 
 .container>*:not(.tab-wrap) {
   padding: 0 80px;
-}
-
-h1, h2 {
-  margin: 0;
-  color: #444;
-  font-weight: 300;
-  text-align: center;
-
 }
 
 html {
@@ -462,34 +424,6 @@ ul li {
   transition: background-color 0.25s ease;
 }
 
-.videos .video-list__item a h2 {
-  color: black;
-  font-size: 2.025rem;
-  line-height: 2.25rem;
-  font-weight: bold;
-  font-family: "ff-dagny-web-pro", "Dagny Pro", Calibri, Arial, sans-serif;
-  width: 80%;
-  padding-left: 1rem;
-  display: inline-block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.videos .video-list__item a h6 {
-  color: black;
-  font-size: 1rem;
-  line-height: 2.25rem;
-  font-weight: bold;
-  font-family: "ff-dagny-web-pro", "Dagny Pro", Calibri, Arial, sans-serif;
-  width: 80%;
-  padding-left: 1rem;
-  display: inline-block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .videos .video-list__item a .video-preview-image {
   width: 25%;
   height: 50%;
@@ -502,6 +436,17 @@ ul li {
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
   border-radius: 0.5rem;
+}
+
+.watch {
+  color: gray;
+}
+
+.content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 812px;
 }
 
 ul.pagination {
@@ -558,7 +503,6 @@ ul.pagination li a {
   ul.drop-down-menu>li {
     float: none;
   }
-  
 }
 
 @media screen and (max-width:850px) {
@@ -593,10 +537,8 @@ ul.pagination li a {
   }
   .videos .video-list__item a h6 {
     font-size: 0.5rem;
-   font-family: "ff-dagny-web-pro", "Dagny Pro", Calibri, Arial, sans-serif;
     width: 100%;
     padding-left: 1rem;
-
   }
 }
 
