--- a/css/index.css
+++ b/css/index.css
@@ -21,8 +21,8 @@
 {
     height: 70%;
     width: 560px;
-    color: blue;
-    border-style:solid;
+    color: red;
+    
     margin-left: 26%;
     
 }
@@ -47,12 +47,12 @@
 }
 
 .select2{
-    background-color: rgba(245, 239, 239, 0.911);
+    border-radius: 15px;
     position: absolute;
     width: 100px;
     height: 60px;
-    border-style: solid;
-    border-radius: 15px; 
+    
+    
 }
 .move
 {
@@ -67,7 +67,7 @@
 .move3
 {
     margin-top: -15%;
-    margin-left: 7%;
+    margin-left: 6%;
 }
 .move4
 {
@@ -76,9 +76,10 @@
 }
 .move5
 {
-    margin-top: 3%;
-    margin-left: 16%;
+    margin-top: -260px;
+    margin-left: 235px;
 }
+
 .stext
 {
     width: 50%;
@@ -89,10 +90,31 @@
 .Options2
 {
    
-    margin-top: 25px;
-     width: 133px;
+    
     display: none;
-    background-color:rgba(245, 239, 239, 0.911);
+    z-index: initial;
+    background-color:rgb(245, 239, 239);
+}
+.bigtype
+{
+    width: 70px;
+}
+.type3
+{
+    width: 160px;
+    
+}
+.type
+{
+    width: 140px;
+}
+.type2
+{
+    width: 160px;
+}
+.type5
+{
+    width: 200px;
 }
 .corner
 {
@@ -110,14 +132,13 @@
 }
 .select2:hover .stext
 {
+    
     border-style:solid;
     border-width: 2px;
-    border-color: transparent transparent black  transparent ;
+    border-color: transparent transparent yellow  transparent ;
+    background-color: yellow;
 }
-.select2:hover
-{
-    background-color:rgba(214, 211, 211, 0.911);
-}
+
 .select2:hover .Options2
 {
     display:block;
