--- a/css/index.css
+++ b/css/index.css
@@ -342,11 +342,9 @@ div:hover.Otext
     .maintext{
         display: block;
         width: 100%;
-        height: 100%;
+        height: 10000px;
     }
-    .presentation{
-        display: none;
-    }
+    
     .mbutton
     {
         width: 478px;
@@ -392,6 +390,61 @@ div:hover.Otext
     color: black;
 }
 }
+@media screen and (max-width:499px)
+{
+
+    .mbutton
+    {
+        width: 300px;
+        height: 300px;
+        margin-left:-1%;
+        
+    }
+    .move
+{
+    margin-top: -43px;
+    margin-left: 165px;
+}
+.move2
+{
+    margin-top: -43px;
+    margin-left: 50px;
+}
+.move3
+{
+    margin-top: -130px;
+    margin-left: 40px;
+}
+.move4
+{
+    margin-top: -130px;
+    margin-left: 180px;
+}
+.move5
+{
+    margin-top: -150px;
+    margin-left: 110px;
+}
+.mtext
+{
+    margin-left: 43%;
+    margin-top: -175px;
+    font-size: 150%;
+    color: black;
+}
+.mtext1
+{
+    margin-left: 38%;
+    margin-top: -20px;
+    font-size: 150%;
+    color: black;
+}
+.stext
+{
+    width: 40px;
+    font-size: 15px;
+}
+}
 
 body {
   width: 100%;
@@ -406,4 +459,5 @@ body {
   overflow: hidden;
   background: #000;
 }
+
 
