--- a/css/list.css
+++ b/css/list.css
@@ -41,16 +41,20 @@ body {
 .search {
   width: 100%;
 }
-
+.title{
+  display: inline;
+}
 .sbox {
   width: 56%;
   height: 50%;
   margin-top: 5%;
   border-radius: 15px;
+  margin-left: 20px;
 }
 
 .sbutton {
-  width: 14%;
+  margin-left: 20px;
+  width: 70px;
   height: 25px;
   border-radius: 50%;
 }
@@ -581,10 +585,7 @@ ul.pagination li a {
     margin-left: 7%;
     width: 90%;
   }
-}
-
-@media screen and (max-width:670px) {
-  .navba {
+    .navba {
     width: 100%;
     height: 80px;
     display: block;
@@ -592,9 +593,16 @@ ul.pagination li a {
   .search {
     width: 90%;
   }
+  .Word{
+    width: 100%;
+  }
 }
 
+
 @media screen and (max-width:580px) {
+  .back{
+    width: 100%;
+  }
   .menu {
     margin-left: 10%;
     width: 80%;
