--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@
     height: 400px;
     border-radius: 50%;
     background: #093b62;
-    animation-name:circle ;
+     animation-name:circle ;
     animation-iteration-count: infinite;
     animation-duration: 8s;
     animation-delay: 0s;
@@ -64,7 +64,36 @@
     margin-top: -40px;
     margin-left:320px;
  }
- 
+ .mv5{
+    margin-top: 70px;
+    margin-left:20px;
+ }
+ .mv6{
+    margin-top: -38px;
+    margin-left:43px;
+ }
+ .mv7{
+    margin-top: -50px;
+    margin-left:86px;
+ }
+ .mv8{
+    margin-top: -50px;
+    margin-left:138px;
+ }
+ body {
+    
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #000;
+}
 
 .maintext {
     margin-top: 1%;
@@ -417,9 +446,7 @@ div:hover.Otext {
         margin-left:3%;
         }
 }
-@media screen and (max-width:499px)
-{
-    
+@media screen and (max-width:499px){
     .ctp{
         display: none;
     
@@ -437,66 +464,54 @@ div:hover.Otext {
         
     }
     .move
-{
-    margin-top: -43px;
-    margin-left: 165px;
-}
-.move2
-{
-    margin-top: -43px;
-    margin-left: 50px;
-}
-.move3
-{
-    margin-top: -130px;
-    margin-left: 40px;
-}
-.move4
-{
-    margin-top: -130px;
-    margin-left: 180px;
-}
-.move5
-{
-    margin-top: -150px;
-    margin-left: 110px;
-}
-.mtext
-{
-    margin-left: 43%;
-    margin-top: -175px;
-    font-size: 150%;
-    color: black;
-}
-.mtext1
-{
-    margin-left: 38%;
-    margin-top: -20px;
-    font-size: 150%;
-    color: black;
-}
-.stext
-{
-    width: 40px;
-    font-size: 15px;
-}
-.circle {
-    margin-left: 3%;
+    {
+        margin-top: -43px;
+        margin-left: 165px;
     }
+    .move2
+    {
+        margin-top: -43px;
+        margin-left: 50px;
+    }
+    .move3
+    {
+        margin-top: -130px;
+        margin-left: 40px;
+}
+    .move4
+    {
+        margin-top: -130px;
+        margin-left: 180px;
+    }
+    .move5
+    {
+        margin-top: -150px;
+        margin-left: 110px;
+    }
+    .mtext
+    {
+        margin-left: 43%;
+        margin-top: -175px;
+        font-size: 150%;
+        color: black;
+    }
+    .mtext1
+    {
+        margin-left: 38%;
+        margin-top: -20px;
+        font-size: 150%;
+        color: black;
+    }
+    .stext
+    {
+        width: 40px;
+        font-size: 15px;
+    }
+    .circle {
+        margin-left: 3%;
+        }
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
 
-#container {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: #000;
-}
 
 
